# primeiro_crud

./: README.md  database.db  docker-compose.yml  pyproject.toml
backend/: Dockerfile  controller.py  database.db  database.py  main.py  models.py  requeriments.txt  requirements.txt  router.py  schemas.py
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/pages/: Atualizar_Produto.py  Criar_Produto.py  Deletar_Produto.py  Detalhe_Produto.py  Visualizar_Produtos.py
