[tool.poetry]
name = "primeiro-crud"
version = "0.1.0"
description = ""
authors = ["Calel95 <borgescalel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.33"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pyproject-toml = "^0.0.10"
pydantic = {extras = ["email"], version = "^2.9.0"}
psycopg2-binary = "^2.9.9"
streamlit = "^1.38.0"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
